<resources>
    <string name="app_name">Connect Four</string>
    <string name="info">Info</string>
    <string name="app_info">App info</string>
    <string name="other_info">Other Info</string>
    <string name="github_link">Github Link</string>
    <string name="new_game">New Game</string>
    <string name="stats">Stats</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="reload">Reload</string>
    <string name="reset">Reset</string>
    <string name="red_player">Red player</string>
    <string name="purple_player">Purple player</string>
    <string name="wins">Wins</string>
    <string name="credits_text">Board game icons created by \<a href="https://www.flaticon.com/free-icons/board-game">Freepik - Flaticon</a></string>
    <string name="clear">Clear</string>
</resources>